// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/popover/demo/arrow-point-at-center.md extend context correctly 1`] = `
Array [
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Align edge / 边缘对齐
    </span>
  </button>,
  <div>
    <div
      class="ant-popover"
      style="opacity:0;pointer-events:none"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-title"
          >
            Title
          </div>
          <div
            class="ant-popover-inner-content"
          >
            <p>
              Content
            </p>
            <p>
              Content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Arrow points to center / 箭头指向中心
    </span>
  </button>,
  <div>
    <div
      class="ant-popover"
      style="opacity:0;pointer-events:none"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-title"
          >
            Title
          </div>
          <div
            class="ant-popover-inner-content"
          >
            <p>
              Content
            </p>
            <p>
              Content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/popover/demo/basic.md extend context correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Hover me
    </span>
  </button>,
  <div>
    <div
      class="ant-popover"
      style="opacity:0;pointer-events:none"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-title"
          >
            Title
          </div>
          <div
            class="ant-popover-inner-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/popover/demo/control.md extend context correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Click me
    </span>
  </button>,
  <div>
    <div
      class="ant-popover"
      style="opacity:0;pointer-events:none"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-title"
          >
            Title
          </div>
          <div
            class="ant-popover-inner-content"
          >
            <a>
              Close
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/popover/demo/hover-with-click.md extend context correctly 1`] = `
Array [
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Hover and click / 悬停并单击
    </span>
  </button>,
  <div>
    <div
      class="ant-popover"
      style="opacity:0;pointer-events:none"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-title"
          >
            Click title
          </div>
          <div
            class="ant-popover-inner-content"
          >
            <div>
              <div>
                This is click content.
              </div>
              <a>
                Close
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div>
    <div
      class="ant-popover"
      style="opacity:0;pointer-events:none"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-title"
          >
            Hover title
          </div>
          <div
            class="ant-popover-inner-content"
          >
            <div>
              This is hover content.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/popover/demo/link.md extend context correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      click me
    </span>
  </button>,
  <div>
    <div
      class="ant-popover"
      style="opacity:0;pointer-events:none"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div>
              <span>
                popover
              </span>
              <a
                style="margin-left:10px"
              >
                Link
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/popover/demo/picture.md extend context correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      click me
    </span>
  </button>,
  <div>
    <div
      class="ant-popover"
      style="opacity:0;pointer-events:none"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              style="display:flex;flex-direction:column;align-items:center;width:400px"
            >
              <div
                class="ant-image"
                style="width:400px"
              >
                <img
                  class="ant-image-img"
                  src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
                />
                <div
                  class="ant-image-mask"
                >
                  <div
                    class="ant-image-mask-info"
                  >
                    <span
                      aria-label="eye"
                      class="anticon anticon-eye"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="eye"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                        />
                      </svg>
                    </span>
                    Preview
                  </div>
                </div>
              </div>
              <span>
                Popover Title
              </span>
              <span>
                This is popoveer.When the text is too long.This is popover. When the text is too long.
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/popover/demo/placement.md extend context correctly 1`] = `
<div
  class="demo"
>
  <div
    style="margin-left:70px;white-space:nowrap"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        TL
      </span>
    </button>
    <div>
      <div
        class="ant-popover"
        style="opacity:0;pointer-events:none"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="ant-popover-inner-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Top
      </span>
    </button>
    <div>
      <div
        class="ant-popover"
        style="opacity:0;pointer-events:none"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="ant-popover-inner-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        TR
      </span>
    </button>
    <div>
      <div
        class="ant-popover"
        style="opacity:0;pointer-events:none"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="ant-popover-inner-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="width:70px;float:left"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        LT
      </span>
    </button>
    <div>
      <div
        class="ant-popover"
        style="opacity:0;pointer-events:none"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="ant-popover-inner-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Left
      </span>
    </button>
    <div>
      <div
        class="ant-popover"
        style="opacity:0;pointer-events:none"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="ant-popover-inner-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        LB
      </span>
    </button>
    <div>
      <div
        class="ant-popover"
        style="opacity:0;pointer-events:none"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="ant-popover-inner-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="width:70px;margin-left:304px"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        RT
      </span>
    </button>
    <div>
      <div
        class="ant-popover"
        style="opacity:0;pointer-events:none"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="ant-popover-inner-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Right
      </span>
    </button>
    <div>
      <div
        class="ant-popover"
        style="opacity:0;pointer-events:none"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="ant-popover-inner-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        RB
      </span>
    </button>
    <div>
      <div
        class="ant-popover"
        style="opacity:0;pointer-events:none"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="ant-popover-inner-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-left:70px;clear:both;white-space:nowrap"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        BL
      </span>
    </button>
    <div>
      <div
        class="ant-popover"
        style="opacity:0;pointer-events:none"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="ant-popover-inner-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Bottom
      </span>
    </button>
    <div>
      <div
        class="ant-popover"
        style="opacity:0;pointer-events:none"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="ant-popover-inner-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        BR
      </span>
    </button>
    <div>
      <div
        class="ant-popover"
        style="opacity:0;pointer-events:none"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="ant-popover-inner-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/popover/demo/triggerType.md extend context correctly 1`] = `
<div>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Hover me
    </span>
  </button>
  <div>
    <div
      class="ant-popover"
      style="opacity:0;pointer-events:none"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-title"
          >
            Title
          </div>
          <div
            class="ant-popover-inner-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Focus me
    </span>
  </button>
  <div>
    <div
      class="ant-popover"
      style="opacity:0;pointer-events:none"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-title"
          >
            Title
          </div>
          <div
            class="ant-popover-inner-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Click me
    </span>
  </button>
  <div>
    <div
      class="ant-popover"
      style="opacity:0;pointer-events:none"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-title"
          >
            Title
          </div>
          <div
            class="ant-popover-inner-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
